--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -55,7 +55,7 @@ body::-webkit-scrollbar {
 }
 
 .hero-picture {
-  position: absolute;
+  position: relative;
   top: calc(-1 * clamp(108px, 11.11vw + 4.15rem, 133px));
   z-index: 0;
 }
